--- a/config/mr808.systemd.service
+++ b/config/mr808.systemd.service
@@ -1,16 +1,14 @@
 [Unit]
 Description=MR808 Sequencer Web Server
-Before=chicken_seq.service
 
 [Service]
-User=www
-Group=www
+User=root
+Group=root
+Type=forking
 WorkingDirectory=/srv/http/mr808
 Restart=always
-ExecStart=/usr/bin/node /srv/http/mr808/server.js
-Environment="SEQ_SERVER_PORT=8080" "PATH=/usr/bin:/usr/local/bin"
-KillMode=process
+ExecStart=/srv/http/mr808/mr808.sh start
+ExecStop=/srv/http/mr808/mr808.sh stop
 
 [Install]
 WantedBy=multi-user.target
-RequiredBy=chicken_seq.service
