--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "dependencies": {
     "express": "3.2.0",
-    "midi": "0.5.0",
     "socket.io": "0.9.14",
     "connect": "2.7.8",
     "buffer-crc32": "0.2.1",
@@ -15,6 +14,7 @@
     "range-parser": "0.0.4",
     "cookie-signature": "1.0.1",
     "cookie": "0.1.0",
-    "send": "0.1.3"
+    "send": "0.1.3",
+    "node-osc": "0.2.1"
   }
 }
