--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "range-parser": "0.0.4",
     "cookie-signature": "1.0.1",
     "cookie": "0.1.0",
-    "send": "0.1.3"
+    "send": "0.1.3",
+    "node-osc": "0.2.1"
   }
 }
