--- a/package.json
+++ b/package.json
@@ -4,17 +4,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "3.2.0",
-    "socket.io": "0.9.14",
-    "connect": "2.7.8",
-    "buffer-crc32": "0.2.1",
-    "methods": "0.0.1",
-    "debug": "0.7.2",
-    "fresh": "0.1.0",
-    "range-parser": "0.0.4",
-    "cookie-signature": "1.0.1",
-    "cookie": "0.1.0",
-    "send": "0.1.3",
+    "express": ">= 3.2.0",
+    "socket.io": ">= 0.9.14",
     "node-osc": "0.2.1"
   }
 }
