--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": ">= 3.2.0",
     "socket.io": ">= 0.9.14",
-    "node-osc": "0.2.1"
+    "node-osc": "0.2.1",
+    "lodash": "2.0.0"
   }
 }
