--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": ">= 3.2.0",
-    "socket.io": ">= 0.9.14",
+    "express": "3.2.0",
+    "socket.io": "0.9.14",
     "node-osc": "0.2.1",
     "lodash": "2.0.0"
   }
