--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,32 +1,27 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
+    
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.+'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
-apply plugin: 'android'
 
-android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
-    
-    defaultConfig {
-      minSdkVersion 8
-      targetSdkVersion 19
-      versionCode 1
-      versionName "1.0"
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
+}
 
-    buildTypes {
-        debug {
-            runProguard false
-            proguardFile getDefaultProguardFile('proguard-android.txt')
-        }
-        release {
-            runProguard true
-            proguardFile getDefaultProguardFile('proguard-android.txt')
-        }
-    }
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
