--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": ">= 3.2.0",
     "socket.io": ">= 0.9.14",
     "node-osc": "0.2.1",
-    "lodash": "2.0.0"
+    "lodash": "2.0.0",
+    "cookie-parser": ">= 1.4.4",
+    "body-parser": ">= 1.18.3"
   }
 }
